Write pixelize function

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,6 +11,4 @@
     left: -20px;
     box-shadow: 20px 20px 0 hotpink, 40px 40px 0 gainsboro, 60px 60px 0 hotpink; }
 
-/* Declare the pixelize function here. */
-
-/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=styles.css.map */
