--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,14 +1,100 @@
-.icons {
-  list-style: none;
-  padding: 0;
-  margin: 30px; }
-  .icons li {
-    outline: 1px solid red;
-    position: absolute;
-    width: 20px;
-    height: 20px;
-    top: -20px;
-    left: -20px;
-    box-shadow: 20px 20px 0 hotpink, 40px 40px 0 gainsboro, 60px 60px 0 hotpink; }
+/*
+Error: Function pixelize is missing argument $size.
+        on line 36 of assets/sass/styles.scss
 
-/*# sourceMappingURL=styles.css.map */
+31:             position: absolute;
+32:             top: -$icon-size-var;
+33:             left: -$icon-size-var;
+34:             width: $icon-size-var;
+35:             height: $icon-size-var;
+36:             box-shadow: pixelize($diamond);
+37:         }
+38:     }
+39: }
+
+Backtrace:
+assets/sass/styles.scss:36
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:75:in `block in perform_arguments'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:67:in `zip'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:67:in `perform_arguments'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/script/tree/funcall.rb:261:in `perform_sass_fn'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/script/tree/funcall.rb:144:in `block in _perform'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/stack.rb:108:in `block in with_function'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/stack.rb:135:in `with_frame'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/stack.rb:108:in `with_function'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/script/tree/funcall.rb:143:in `_perform'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/script/tree/node.rb:50:in `perform'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:402:in `visit_prop'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/tree/visitors/base.rb:36:in `visit'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:162:in `block in visit'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/stack.rb:79:in `block in with_base'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/stack.rb:135:in `with_frame'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/stack.rb:79:in `with_base'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:162:in `visit'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:444:in `block (2 levels) in visit_rule'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:444:in `map'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:444:in `block in visit_rule'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:183:in `with_environment'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:442:in `visit_rule'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/tree/visitors/base.rb:36:in `visit'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:162:in `block in visit'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/stack.rb:79:in `block in with_base'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/stack.rb:135:in `with_frame'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/stack.rb:79:in `with_base'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:162:in `visit'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:444:in `block (2 levels) in visit_rule'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:444:in `map'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:444:in `block in visit_rule'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:183:in `with_environment'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:442:in `visit_rule'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/tree/visitors/base.rb:36:in `visit'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:162:in `block in visit'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/stack.rb:79:in `block in with_base'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/stack.rb:135:in `with_frame'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/stack.rb:79:in `with_base'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:162:in `visit'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:444:in `block (2 levels) in visit_rule'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:444:in `map'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:444:in `block in visit_rule'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:183:in `with_environment'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:442:in `visit_rule'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/tree/visitors/base.rb:36:in `visit'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:162:in `block in visit'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/stack.rb:79:in `block in with_base'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/stack.rb:135:in `with_frame'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/stack.rb:79:in `with_base'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:162:in `visit'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/tree/visitors/base.rb:52:in `map'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/tree/visitors/base.rb:52:in `visit_children'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:171:in `block in visit_children'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:183:in `with_environment'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:170:in `visit_children'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/tree/visitors/base.rb:36:in `block in visit'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:190:in `visit_root'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/tree/visitors/base.rb:36:in `visit'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:161:in `visit'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:10:in `visit'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/tree/root_node.rb:36:in `css_tree'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/tree/root_node.rb:29:in `render_with_sourcemap'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/engine.rb:389:in `_render_with_sourcemap'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/engine.rb:307:in `render_with_sourcemap'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/plugin/compiler.rb:462:in `update_stylesheet'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/plugin/compiler.rb:209:in `each'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/plugin/compiler.rb:443:in `on_file_changed'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-3.5.6/lib/sass/plugin/compiler.rb:320:in `block in watch'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-listen-4.0.0/lib/sass-listen/event/config.rb:23:in `call'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-listen-4.0.0/lib/sass-listen/event/processor.rb:115:in `_process_changes'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-listen-4.0.0/lib/sass-listen/event/processor.rb:19:in `block in loop_for'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-listen-4.0.0/lib/sass-listen/event/processor.rb:15:in `loop'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-listen-4.0.0/lib/sass-listen/event/processor.rb:15:in `loop_for'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-listen-4.0.0/lib/sass-listen/event/loop.rb:84:in `_wait_for_changes'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-listen-4.0.0/lib/sass-listen/event/loop.rb:42:in `block in setup'
+/home/lucas/.rvm/gems/ruby-2.4.1/gems/sass-listen-4.0.0/lib/sass-listen/internals/thread_pool.rb:6:in `block in add'
+*/
+body:before {
+  white-space: pre;
+  font-family: monospace;
+  content: "Error: Function pixelize is missing argument $size.\A         on line 36 of assets/sass/styles.scss\A \A 31:             position: absolute;\A 32:             top: -$icon-size-var;\A 33:             left: -$icon-size-var;\A 34:             width: $icon-size-var;\A 35:             height: $icon-size-var;\A 36:             box-shadow: pixelize($diamond);\A 37:         }\A 38:     }\A 39: }"; }
