--- a/assets/sass/functions.scss
+++ b/assets/sass/functions.scss
@@ -9,7 +9,8 @@
         'r': #f00,
         'w': #fff,
         'k': #000,              /* k for key, from CMYK */
-        'o': transparent
+        'o': transparent,
+        'x': hotpink
     );
 
     /* Go through all the rows in the list */
@@ -21,7 +22,8 @@
 
             /* Translate codes from matrix */
             @if map-has-key($pixel-color-map, $item) {
-                $shadows: $shadows + ($j * $size) + ' ' + ($i * $size) + ' ' + map-get($pixel-color-map, $item);
+                /* Is there a better way of joining strings with SassScript? */
+                $shadows: $shadows + unquote(($j * $size) + ' ' + ($i * $size) + ' ' + map-get($pixel-color-map, $item)) + ', ';
             } @else {
                 /* Safeguard */
                 @warn 'There is no color specified in "$pixel-color-map" for "#{$item}"';
@@ -29,5 +31,21 @@
         }
     }
     /* Return entire shadow list */
-    @return unquote($shadows);
+    @return unquote(str-slice($shadows, 1, str-length($shadows) - 2));
+}
+
+@mixin style-item($matrix, $size) {
+    position: relative;
+    width: ($size * length(nth($matrix, 1)));
+    height: ($size * length($matrix));
+
+    &:after {
+        content: '';
+        position: absolute;
+        top: $size * (-1);
+        left: $size * (-1);
+        width: $size;
+        height: $size;
+        box-shadow: pixelize($matrix, $size);
+    }
 }
